# fuzzy_finder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: lotr.rs
examples/data/: lotr_characters.csv
src/: lib.rs  list.rs
