[package]
authors = ["James Cole <jamescole.uk@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A fuzzy finding UI for CLI applications written in Rust"
edition = "2021"
keywords = ["bash", "cli"]
license = "MIT OR Apache-2.0"
name = "fuzzy_finder"
repository = "https://github.com/jamescoleuk/fuzzy_finder"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: use thiserror instead of anyhow
anyhow = "1.0.44"
csv = "1.1"
fuzzy-matcher = "0.3.7"
log = "0.4.14"
pastel_colours = "0.1.3"
termion = "1.5.6"

[dev-dependencies]
serde = {version = "1.0.139", features = ["derive"]}
